# ucsd-psystem-os

./: .gitignore  BUILDING  LICENSE  LICENSE-UCSD  Makefile  Makefile.in  README  config.status  configure  meson.build  meson_options.txt  ucsdpsys_os_license_bsd.1
aegis.conf.d/: architecture  build  develop_end_policy  diff  file_template  history  merge  web
aegis.file.template/: asm_text  c  cc  cook  generic  h  man  sh  test.sh  text
arch/: 00readme.txt
arch/pdp11/assembler/: asm1.text  asm2.text  asm3.text  asm4.text  asm5.text  asm6.text  main.text  module.cook
arch/pdp11/interpreter/: 00readme.txt  dl.inc.text  iotrap.inc.text  lp.inc.text  macros.inc.text  main.asm.text  mainop.inc.text  procop.inc.text  qx.inc.text  rk.inc.text  rx.inc.text  tk.inc.text
arch/pdp11/qxboot/: main.asm.text
arch/pdp11/rkboot/: main.asm.text
arch/pdp11/rxboot/: main.asm.text
arch/z80/assembler/: asm1.text  asm2.text  asm3.text  asm4.text  asm5.text  asm6.text  error-messages.text  extra.z80.text  main.text  opcode-data.text
arch/z80/interpreter/: arith.inc.text  boot.inc.text  cpmio.inc.text  fpi.inc.text  fpl.inc.text  fpt.inc.text  interp.inc.text  main.asm.text  nofpi.inc.text  nofpt.inc.text  proc1.inc.text  proc2.inc.text  set1.inc.text  set2.inc.text  stp.inc.text  vars.inc.text
basic/: main.text  meson.build
basicio/: main.txt
binder/: main.text  meson.build
bios.diag/: b.diag.dsk.text  b.diag.int.text  b.diag.rsp.text  b.diag.ser.text  main.text  meson.build
calc/: main.text  meson.build
charset/: bit-map-font.text  module.cook
compiler/: block.text  bodypart.a.text  bodypart.b.text  bodypart.c.text  bodypart.d.text  bodypart.e.text  compglbls.text  compinit.text  decpart.a.text  decpart.b.text  decpart.c.text  error-messages.text  main.text  meson.build  module.cook  procs.a.text  procs.b.text  unitpart.text
copydupdir/: main.text  meson.build
cross/: klebsch-stage1.ini
debian/: changelog  control  copyright  rules  ucsd-psystem-os.install
diagnostic/: diag0.text  diag1.text  diag2.text  diag3.text  diag4.text  diag5.text  diag6.text  main.text  meson.build
disassembler/: disasm1.text  disasm2.text  main.text  meson.build  module.cook  opcodes.ii.0.txt
editor/: command.text  copyfile.text  environ.text  find.text  head.text  init.text  insertit.text  main.text  meson.build  misc.text  module.cook  moveit.text  out.text  putsyntax.text  user.text  util.text
edittort11/: main.text  meson.build
etc/: BUILDING.man  Howto.conf.in  Howto.cook  README.man  arch-from-host.sh  autoconf.cook  change_log.man  check-tarball.sh  configure.ac  documentation.cook  host-disk-kb.sh  metrics.cook  mkfsdisk.py  new.sh  page-list.awk  ppa-upload.sh  ref-ptx.ignore  ref-ptx.sh  ref-ptx1.awk  ref-ptx2.awk  reference.man  stage1.cook  tags.cook  ucsdpsys-wrapper.sh  vstamp.asm.text  vstamp.inc.text
execerr/: main.text  meson.build
filer/: filer.a.text  filer.b.text  filer.c.text  filer.d.text  filer.e.text  filer.vars.text  main.text  meson.build  module.cook
host/: 00readme.txt
host/klebsch/: meson.build  miscinfo.text
host/klebsch/long_integer/: main.asm.text  meson.build
host/klebsch/transcendental/: main.asm.text  meson.build
host/klebsch/turtle_graphics/: main.asm.text  meson.build
libmap/: main.text  meson.build
librarian/: main.text  meson.build  module.cook
linker/: link0.text  link1.text  link2.text  link3a.text  link3b.text  main.text  meson.build  module.cook
long_integer/: decop.a.text  decop.b.text  drwstuff.text  globals.text  main.text  meson.build
man/: meson.build
man/man1/: ucsdpsys_os_license_bsd.1  ucsdpsys_os_license_ucsd.1
markdupdir/: main.text  meson.build
pascalio/: main.text  meson.build  module.cook  unit.text
radix/: main.text  meson.build
rt11toedit/: main.text  meson.build
setup/: main.text  meson.build
system/: globals.text  main.text  meson.build  module.cook  syssegs.a.text  syssegs.b.text  system.a.text  system.b.text  system.c.text
transcendental/: main.text  meson.build
turtle_graphics/: main.text  meson.build
web/: building.html  download.html  howto.html  icon.png.uue  index.html  module.cook
xref/: main.text  meson.build
yaloe/: main.text  meson.build  module.cook
